catapi service + content overflow & bg image fix

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,7 @@ html,
 body {
   margin: 0;
   color: $white;
+  overflow-x: hidden;
 }
 
 .list-plain {
